--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
@@ -17,7 +17,7 @@
                                 Background="{Binding Path=BackgroundExpander1.Value, Mode=TwoWay}"
                                 IsExpanded="{Binding Path=IsExpanded1.Value, Mode=TwoWay}"
                                 ExpandDirection="{Binding Path=ExpandDirection1.Value, Mode=TwoWay}">
-                    <Grid Height="250">
+                    <Grid>
                         <TextBlock HorizontalAlignment="Center" 
                                 TextWrapping="Wrap" 
                                 Text="This is the content"
@@ -26,7 +26,7 @@
                     </Grid>
 
                     <controls:Expander.ContentOverlay>
-                        <Grid Background="Red">
+                        <Grid Background="Red" Height="250">
                             <TextBlock Text="Hello world!"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center" />
