--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
@@ -26,7 +26,7 @@
                     </Grid>
 
                     <controls:Expander.ContentOverlay>
-                        <Grid Background="Red" Height="250">
+                        <Grid Background="Red" MinHeight="250">
                             <TextBlock Text="Hello world!"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center" />
