--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Microsoft Graph Service/MicrosoftGraphPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Microsoft Graph Service/MicrosoftGraphPage.xaml
@@ -84,12 +84,19 @@
                             <HyperlinkButton Margin="0,0,0,15"
                                              Content="Show me how to get this ID"
                                              NavigateUri="http://uwpcommunitytoolkit.com/en/master/services/MicrosoftGraph/" />
-                            <Button x:Name="ConnectButton"
+                            <StackPanel Orientation="Horizontal">
+                                <Button x:Name="ConnectButton"
                                     Width="75"
                                     Margin="0,10,0,0"
                                     VerticalAlignment="Bottom"
                                     Click="ConnectButton_Click"
                                     Content="Sign in" />
+                                <Button x:Name="RemoteConnectButton"
+                                    Margin="0,10,0,0"
+                                    VerticalAlignment="Bottom"
+                                    Click="RemoteConnectButton_Click"
+                                    Content="Sign in using another device" />
+                            </StackPanel>
                             <Button x:Name="LogOutButton"
                                     Width="75"
                                     Margin="0,10,0,0"
