--- a/Microsoft.Toolkit.Uwp.UI.Controls/Menu/Menu.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Menu/Menu.xaml
@@ -46,7 +46,8 @@
                             FontStyle="{TemplateBinding FontStyle}"
                             FontWeight="{TemplateBinding FontWeight}"
                             Foreground="{TemplateBinding Foreground}"
-                            IsTabStop="False">
+                            IsTabStop="False"
+                            Padding="{TemplateBinding Padding}">
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CommonStates">
                                 <VisualState x:Name="Normal">
